Style: add default (webkit) scrollbar style, and selected tree item style, plus bootstrap fixes

--- a/builds/itee-client.style.css
+++ b/builds/itee-client.style.css
@@ -46,8 +46,31 @@ body {
   display: flex;
   background-color: #4b4b4b;
 }
-label {
-  margin: 0!important;
+::-webkit-scrollbar-button {
+  display: none;
+  height: 13px;
+  border-radius: 0px;
+  background-color: #aaaaaa;
+}
+::-webkit-scrollbar-button:hover {
+  background-color: #aaaaaa;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #247bff;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #5465fc;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-track {
+  background-color: #d3d3d3;
+}
+::-webkit-scrollbar-track:hover {
+  background-color: #d2d2d2;
+}
+::-webkit-scrollbar {
+  width: 2px;
 }
 #itee-application-root {
   display: flex;
@@ -244,6 +267,12 @@ label {
   user-select: none;
   min-height: 20px;
 }
+.tTree ul.tTreeItemChildren li.tTreeItem.selected {
+  background-color: #006dc6;
+  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
 .tTree ul.tTreeItemChildren li.tTreeItem:last-child > .tTreeItemContent::before {
   content: "\2514";
 }
@@ -314,4 +343,28 @@ input:checked + .slider:before {
 }
 .slider.round:before {
   border-radius: 50%;
+}
+label {
+  margin: 0 !important;
+}
+.custom-file-label {
+  overflow-x: hidden;
+}
+.modal {
+  overflow-y: scroll !important;
+}
+.progress .progress-bar {
+  -webkit-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+  transition: none;
+}
+.input-group-text input[type=color] {
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin: -15px 0;
+  background-color: #e9ecef;
+  border: none;
 }
