--- a/styles/itee-client.less
+++ b/styles/itee-client.less
@@ -37,15 +37,24 @@ body {
     background-color: #4b4b4b;
 }
 
-// Against bootstrap
-label {
-    margin: 0!important;
-}
+::-webkit-scrollbar-button { display: none; height: 13px; border-radius: 0px; background-color: #aaaaaa; }
+
+::-webkit-scrollbar-button:hover { background-color: #aaaaaa; }
+
+::-webkit-scrollbar-thumb { background-color: #247bff; border-radius: 20px; }
+
+::-webkit-scrollbar-thumb:hover { background-color: #5465fc; border-radius: 20px; }
+
+::-webkit-scrollbar-track { background-color: #d3d3d3; }
+
+::-webkit-scrollbar-track:hover { background-color: #d2d2d2; }
+
+::-webkit-scrollbar { width: 2px; }
 
 #itee-application-root {
     display: flex;
-    width: 100%;
-    height: 100%;
+    width:   100%;
+    height:  100%;
 }
 
 // Utils
@@ -130,7 +139,6 @@ label {
     }
 
 }
-
 
 .tToolBar {
     z-index:          2;
@@ -314,6 +322,13 @@ label {
             user-select: none;
             min-height:  20px;
 
+            &.selected {
+                background-color: #006dc6;
+                border-radius:    5px;
+                padding-left:     5px;
+                padding-right:    5px;
+            }
+
             &:last-child {
 
                 > .tTreeItemContent::before {
@@ -349,7 +364,7 @@ label {
 
 }
 
-.tViewport3D {}
+.tViewport3D { }
 
 /* Generated by Paletton.com Â© 2002-2014 */
 /* http://paletton.com */
@@ -413,4 +428,43 @@ input:checked + .slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//BOOTSTRAP FIXES
+// Against bootstrap
+label {
+    margin: 0 !important;
+}
+
+.custom-file-label {
+    overflow-x: hidden;
+}
+
+.modal {
+    overflow-y: scroll !important;
+}
+
+.progress .progress-bar {
+    -webkit-transition: none;
+    -moz-transition:    none;
+    -ms-transition:     none;
+    -o-transition:      none;
+    transition:         none;
+}
+
+// Extend bootstrap
+
+.input-group-text {
+
+    input[type=color] {
+        width: 30px;
+        height: 30px;
+        padding: 0;
+        margin: -15px 0;
+        background-color: #e9ecef;
+        border: none;
+    }
+
 }
